--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 
             <input type="submit">
         </form>
-
+        <button>
+            <a href="./forms.html">NEXT PAGE</a>
+        </button>
     </body>
 </html>
