--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
 
             <input type="submit">
         </form>
-        <a href="./forms.html">NEXT PAGE</a>
+        <a href="./forms">NEXT PAGE</a>
     </body>
 </html>
